5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1756_1183.log
== SUBMITION (2019-05-28 12:49:37) 
-- CODE:
vet = int(input("Insira um vetor: "))
copia = ""
i = 0
positivo = 0

while(i < vet):
	if(vet > 0):
		positivo = positivo + 1
		copia = positivo
	else: 
		i = i + 0
	
-- EXECUTION TIME:
0.134499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 1, in <module>
    vet = int(input())
ValueError: invalid literal for int() with base 10: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:49:39) 
-- CODE:
vet = int(input("Insira um vetor: "))
copia = ""
i = 0
positivo = 0

while(i < vet):
	if(vet > 0):
		positivo = positivo + 1
		copia = positivo
	else: 
		i = i + 0
	
-- EXECUTION TIME:
0.216396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 1, in <module>
    vet = int(input())
ValueError: invalid literal for int() with base 10: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:31:59) 
-- CODE:
vet = int(input("Insira um vetor: "))
copia = ""
i = 0
positivo = 0

while(i < vet):
	if(vet > 0):
		positivo = positivo + 1
		copia = positivo
	else: 
		i = i + 0
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet = int(input())
ValueError: invalid literal for int() with base 10: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:32:42) 
-- CODE:
vet = input("Insira um vetor: "))
copia = ""
i = 0
positivo = 0

while(i < vet):
	if(vet > 0):
		positivo = positivo + 1
		copia = positivo
	else: 
		i = i + 0
	
-- EXECUTION TIME:
0.213602
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 1
    vet = input())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:32:43) 
-- CODE:
vet = input("Insira um vetor: "))
copia = ""
i = 0
positivo = 0

while(i < vet):
	if(vet > 0):
		positivo = positivo + 1
		copia = positivo
	else: 
		i = i + 0
	
-- ERROR:
File "XXXX", line 1
    vet = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:32:50) 
-- CODE:
vet = input("Insira um vetor: ")
copia = ""
i = 0
positivo = 0

while(i < vet):
	if(vet > 0):
		positivo = positivo + 1
		copia = positivo
	else: 
		i = i + 0
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(i < vet):
TypeError: '<' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:33:22) 
-- CODE:
vet = input("Insira um vetor: ")
copia = ""
i = 0
positivo = 0

while(i < size(vet)):
	if(vet > 0):
		positivo = positivo + 1
		copia = positivo
	else: 
		i = i + 0
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(i < size(vet)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
